[project]
name = "pytorch-noise-engine"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "attrs>=25.4.0",
    "click>=8.3.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pydantic>=2.12.5",
    "pyside6>=6.10.2",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "torch>=2.10.0",
]

[project.scripts]
noise = "noise_engine.__main__:main"
